--- a/src/components/TeamBadge/TeamBadge.css
+++ b/src/components/TeamBadge/TeamBadge.css
@@ -1,7 +1,9 @@
 .badge-photo {
   border-style: solid;
   border-width: 5px;
-  border-radius: 120px;
+  border-radius: 4vw;
+  height: auto;
+  width: 10vw;
 }
 
 .badge {
