--- a/src/Faq.css
+++ b/src/Faq.css
@@ -1,6 +1,6 @@
 .faq-box {
   border-style: solid;
-  border-width: 5px;
+  border-width: 3px;
   border-color: #825B5A;
   text-align: center;
   padding-left: 7vw;
@@ -10,6 +10,6 @@
 }
 
 .faq-entry {
-  text-align: justify;
+  text-align: left;
   padding-bottom: 2vh;
 }
