--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -10,11 +10,17 @@
 
 .profile-content {
   position: relative;
-  width: 25vw;
+  width: 100%;
+  height: auto;
 }
 
 .profile-photo {
   position: relative;
   height: auto;
   width: 30vw;
+}
+
+.profile-photo.small {
+  bottom: 5vh;
+  width: 15vw;
 }
