--- a/src/components/Section/Section.css
+++ b/src/components/Section/Section.css
@@ -9,6 +9,7 @@
 
 /* Sections */
 .section-container {
+  box-sizing: border-box;
 }
 
 .section.content {
@@ -72,7 +73,7 @@
 
 
 svg {
-  width: 100vw;
+  width: 100%;
 }
 
 svg.flip {
